vlib/v/checker/tests/inout/assign_expr_type_err_b.out
vlib/v/checker/tests/inout/assign_expr_type_err_b.v:3:7: error: operator *= not defined on left type `bool`
    1| fn main() {
    2|     mut a := true
    3|     a *= false
                ~~~~~			 
    4| }
