vlib/v/checker/tests/inout/assign_expr_type_err_b.vv
fn main() {
	mut a := true
	a *= false
}